force-app/main/default/objects/Opportunity__c/fields/accuracy_old__c.field-meta.xml
<CustomField>
    <fullName>accuracy_old__c</fullName>
    <label>確度(旧)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>×</fullName>
            </value>
            <value>
                <fullName>▲▲</fullName>
            </value>
            <value>
                <fullName>▲</fullName>
            </value>
            <value>
                <fullName>△</fullName>
            </value>
            <value>
                <fullName>〇△</fullName>
            </value>
            <value>
                <fullName>〇</fullName>
            </value>
            <value>
                <fullName>予算</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>