force-app/main/default/objects/Opportunity__c/fields/CompletionBasis__c.field-meta.xml
<CustomField>
    <fullName>CompletionBasis__c</fullName>
    <label>完了基準</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>StageName__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-1:お客様へ提案するための調査を完了した。</fullName>
            </value>
            <value>
                <fullName>0-2:仮説課題をたてて、提案骨子を整理した。</fullName>
            </value>
            <value>
                <fullName>0-3:上長に提案内容を相談し、承認を得た。</fullName>
            </value>
            <value>
                <fullName>0-4:提案資料を作成した。</fullName>
            </value>
            <value>
                <fullName>0-5:お客様にアポイントが取れた。</fullName>
            </value>
            <value>
                <fullName>1-1:お客様を訪問、または非対面で面談し、当社の紹介を行った。</fullName>
            </value>
            <value>
                <fullName>1-2:お客様との商談から、仮説に対して意見をいただいた。</fullName>
            </value>
            <value>
                <fullName>1-3:次回商談の日程を確定した。</fullName>
            </value>
            <value>
                <fullName>2-1:お客様から頂いた意見を活かして、提案資料を作成した。</fullName>
            </value>
            <value>
                <fullName>2-2: お客様に提案を実施し、仮説課題に対して意見交換ができた。</fullName>
            </value>
            <value>
                <fullName>2-3: より具体的案提案をするため、次回のアポイントが取れた。</fullName>
            </value>
            <value>
                <fullName>3-1:これまでの仮説検討に沿い、お客様に適当な商品を選択し、提案した。</fullName>
            </value>
            <value>
                <fullName>3-2:お客様の現場を訪問した。</fullName>
            </value>
            <value>
                <fullName>3-3:概算見積もり、費用対効果を提示するアポイントが取れた。</fullName>
            </value>
            <value>
                <fullName>4-1:概算見積もり、費用対効果を提示し、金額感を掴んでいただいた。</fullName>
            </value>
            <value>
                <fullName>4-2:本提案を行うための、方向性を確認できた。</fullName>
            </value>
            <value>
                <fullName>4-3:本提案実施のアポイントが取れた。</fullName>
            </value>
            <value>
                <fullName>5-1:提案内容を理解いただき、方向性の合意をいただいた。</fullName>
            </value>
            <value>
                <fullName>5-2:試作品・実機で打ち合わせを実施し、改良点を確認した。</fullName>
            </value>
            <value>
                <fullName>5-3:改良点を修正した資料で、再度提案を実施した。</fullName>
            </value>
            <value>
                <fullName>6-1:提案内容を理解いただき、方向性の合意をいただいた。</fullName>
            </value>
            <value>
                <fullName>6-2:NDAが締結でき、お客様から見積提出に必要な情報を取得した。</fullName>
            </value>
            <value>
                <fullName>6-3:提案内容に基づき見積書の作成を依頼された。</fullName>
            </value>
            <value>
                <fullName>7-1:提案内容に基づく見積書を提示した。</fullName>
            </value>
            <value>
                <fullName>7-2:見積もりの附帯事項を説明した。</fullName>
            </value>
            <value>
                <fullName>7-3:見積りに対して担当者に理解をいただいた。</fullName>
            </value>
            <value>
                <fullName>8-1:担当者に内諾をいただいた。</fullName>
            </value>
            <value>
                <fullName>8-2:その後の工程、進め方について、担当者と打ち合わせを行った。</fullName>
            </value>
            <value>
                <fullName>8-3:担当役員へ提案実施のアポイントが取れた。</fullName>
            </value>
            <value>
                <fullName>9-1:担当役員に内諾をいただいた。</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>