force-app/main/default/objects/Opportunity__c/fields/Field7__c.field-meta.xml
<CustomField>
    <fullName>Field7__c</fullName>
    <label>商談種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>リピート</fullName>
            </value>
            <value>
                <fullName>自主提案</fullName>
            </value>
            <value>
                <fullName>指定引き合い</fullName>
            </value>
            <value>
                <fullName>競合引き合い(コンペ)</fullName>
            </value>
            <value>
                <fullName>コンペ</fullName>
            </value>
            <value>
                <fullName>リピート(完全リピート)</fullName>
            </value>
            <value>
                <fullName>リピート (一部改版リピート)</fullName>
            </value>
            <value>
                <fullName>コンペ(試作当社価格入札)</fullName>
            </value>
            <value>
                <fullName>コンペ(試作他社価格入札)</fullName>
            </value>
            <value>
                <fullName>コンペ (プレゼン)</fullName>
            </value>
            <value>
                <fullName>自主提案(プッシュ)</fullName>
            </value>
            <value>
                <fullName>展示会</fullName>
            </value>
            <value>
                <fullName>WEB問合せ(広告経由)</fullName>
            </value>
            <value>
                <fullName>WEB問合せ(メルマガ経由)</fullName>
            </value>
            <value>
                <fullName>WEB問合せ(検索)</fullName>
            </value>
            <value>
                <fullName>電話問い合わせ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>