force-app/main/default/objects/Opportunity__c/fields/StageName__c.field-meta.xml
<CustomField>
    <fullName>StageName__c</fullName>
    <label>フェーズ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>フェーズ0 情報</fullName>
            </value>
            <value>
                <fullName>フェーズ1 顧客訪問・商品紹介</fullName>
            </value>
            <value>
                <fullName>フェーズ2 ヒアリング</fullName>
            </value>
            <value>
                <fullName>フェーズ3 引合い</fullName>
            </value>
            <value>
                <fullName>フェーズ4 概算・効果提案</fullName>
            </value>
            <value>
                <fullName>フェーズ5 提案済み</fullName>
            </value>
            <value>
                <fullName>フェーズ6 本提案合意</fullName>
            </value>
            <value>
                <fullName>フェーズ7 見積提出</fullName>
            </value>
            <value>
                <fullName>フェーズ8 担当内諾</fullName>
            </value>
            <value>
                <fullName>フェーズ9 役員内定</fullName>
            </value>
            <value>
                <fullName>フェーズ10 運用方法確定</fullName>
            </value>
            <value>
                <fullName>フェーズ11 役員決裁裁可</fullName>
            </value>
            <value>
                <fullName>フェーズ12 受注</fullName>
            </value>
            <value>
                <fullName>失注</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>