force-app/main/default/objects/Opportunity__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>状態</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0.提案に向けた調査、資料作成、アポ取りなどの準備を行う。</fullName>
            </value>
            <value>
                <fullName>1.お客様を訪問し、ニーズの把握、商品紹介を行う。</fullName>
            </value>
            <value>
                <fullName>2.お客様の潜在の課題についてヒアリングで深堀する。</fullName>
            </value>
            <value>
                <fullName>3.お客様と課題の解決策を検討する。</fullName>
            </value>
            <value>
                <fullName>4.お客様に提案を実施し、方向性を確認する。概算見積もりを提示する。</fullName>
            </value>
            <value>
                <fullName>5.お客様の潜在課題までを解決する提案を実施する。</fullName>
            </value>
            <value>
                <fullName>6.提案内容の合意から、より細かい試算、条件面について資料開示を受ける。</fullName>
            </value>
            <value>
                <fullName>7.正式な見積条件に基づく、見積を提出する。</fullName>
            </value>
            <value>
                <fullName>8.担当者から内諾を得るための提案を実施する。</fullName>
            </value>
            <value>
                <fullName>9.担当役員から内諾を得るための提案を実施する。</fullName>
            </value>
            <value>
                <fullName>10.顧客現場での運用方法をすり合わせ、社内調整を実施する。</fullName>
            </value>
            <value>
                <fullName>11.全ての資料を整え、お客様からの裁可を得る。</fullName>
            </value>
            <value>
                <fullName>12.機械発注から初回入金までの一連の対応が完了する。</fullName>
            </value>
            <value>
                <fullName>失注の判断を行い、状況を確定する。</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>