force-app/main/default/objects/Opportunity__c/recordTypes/DefaultRecordType.recordType-meta.xml
<RecordType>
    <fullName>DefaultRecordType</fullName>
    <active>true</active>
    <label>商談</label>
</RecordType>