force-app/main/default/objects/Opportunity__c/recordTypes/NewOperationalTest.recordType-meta.xml
<RecordType>
    <fullName>NewOperationalTest</fullName>
    <active>true</active>
    <label>新運用テスト</label>
</RecordType>