force-app/main/default/objects/Opportunity__c/recordTypes/OldNewOperationalTest.recordType-meta.xml
<RecordType>
    <fullName>OldNewOperationalTest</fullName>
    <active>true</active>
    <label>旧+新テスト</label>
</RecordType>