force-app/main/default/objects/Opportunity__c/recordTypes/RecordType.recordType-meta.xml
<RecordType>
    <fullName>RecordType</fullName>
    <active>true</active>
    <label>自動車</label>
</RecordType>