force-app/main/default/objects/Opportunity__c/recordTypes/RecordType2.recordType-meta.xml
<RecordType>
    <fullName>RecordType2</fullName>
    <active>true</active>
    <label>新規商談（SP商談）：推進メンバーのみ表示中</label>
</RecordType>