force-app/main/default/objects/Opportunity__c/recordTypes/RecordTypeJFB.recordType-meta.xml
<RecordType>
    <fullName>RecordTypeJFB</fullName>
    <active>true</active>
    <label>商談（重要案件：JFB）</label>
</RecordType>