force-app/main/default/objects/Opportunity__c/validationRules/CompletionCriteriaMet_13.validationRule-meta.xml
<ValidationRule>
    <fullName>CompletionCriteriaMet_13</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(RecordType.DeveloperName = &quot;NewOperationalTest&quot;, RecordType.DeveloperName = &quot;OldNewOperationalTest&quot;),
    OR(
        AND(
            ISPICKVAL(StageName__c, &quot;失注&quot;),
            OR(
                NOT(INCLUDES(CompletionBasis__c, &quot;13-1: 上長に状況を報告し、継続・失注判断を得た。&quot;))
            )
        )
    )
)</errorConditionFormula>
    <errorMessage>完了基準を満たしていません！！</errorMessage>
</ValidationRule>